--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/capt1.png
+    - assets/images/logo.png
+    - assets/images/logo3.jpg
+    - assets/images/photo4.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
