--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^10.3.0
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +59,7 @@ flutter:
     - assets/images/logo.png
     - assets/images/logo3.jpg
     - assets/images/photo4.png
+    - assets/images/1.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
